--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
             <li>
                 <a href="./redirect/geolocation/index.html">Geolocation</a>
             </li>
+            <li>
+                <a href="./donation.html">Donazioni</a>
+            </li>
            </ul>
         </div>
     </div>
