--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a href="./redirect/geolocation/index.html">Geolocation</a>
             </li>
             <li>
-                <a href="./donation.html">Donazioni</a>
+                <a href="./donate.html">Donazioni</a>
             </li>
            </ul>
         </div>
