--- a/redirect/Scuola/TPSI/tpsi.html
+++ b/redirect/Scuola/TPSI/tpsi.html
@@ -18,6 +18,9 @@
                 <a href="./Fiorellino funzionato/index.html">Fiorellino funzionato</a>
             </li>
             <li>
+                <a href="./RandomCircles/index.html">Cerchi Random</a>
+            </li>
+            <li>
                 <a href="../scuola.html">(<-) Back</a>
             </li>
            </ul>
