--- a/redirect/Scuola/TPSI/tpsi.html
+++ b/redirect/Scuola/TPSI/tpsi.html
@@ -21,6 +21,9 @@
                 <a href="./RandomCircles/index.html">Cerchi Random</a>
             </li>
             <li>
+                <a href="./Esercizi da beginners/index.html">Esercizi da Beginner</a>
+            </li>
+            <li>
                 <a href="../scuola.html">(<-) Back</a>
             </li>
            </ul>
