--- a/redirect/Scuola/Informatica/informatica.html
+++ b/redirect/Scuola/Informatica/informatica.html
@@ -18,6 +18,9 @@
                 <a href="./NumeriAlternati/src/MainClass.java">Numeri Alternati</a>
             </li>
             <li>
+                <a href="./NumeriAlternati/src/MainClass.java">Area Rettangolo (Costructor)</a>
+            </li>
+            <li>
                 <a href="../scuola.html">(<-) Back</a>
             </li>
            </ul>
