--- a/redirect/Scuola/TPSI/Esercizi da beginners/exercises/MinToMs.html
+++ b/redirect/Scuola/TPSI/Esercizi da beginners/exercises/MinToMs.html
@@ -4,18 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Convertitore</title>
-    <script src="./static/js/js.js"></script>
+    <title>Da ore a millisec</title>
     <link rel="stylesheet" href="static/css/css.css">
 </head>
 <body>
     <div class="calcoliVari">
-        <div>
-            <input type="number" name="datetime" id="ora" placeholder="Inserisci l'ora">
-            <input type="number" name="datetime" id="minuti" placeholder="Inserisci i minuti">
-            <button onclick="HoursAndMinutes()">Calcola</button>
-            <p id="clock">&nbsp;</p>
-        </div>
+        <form id="time-converter">
+            <div>
+                <input type="number" name="datetime" id="ora" placeholder="Inserisci l'ora">
+                <input type="number" name="datetime" id="minuti" placeholder="Inserisci i minuti">
+                <button onclick="HoursAndMinutes()">Calcola</button>
+                <p id="clock">&nbsp;</p>
+            </div>
+        </form>
     </div>
+    <script src="./static/js/fromHoursToMillisec.js"></script>
 </body>
 </html>
