--- a/redirect/Scuola/TPSI/Esercizi da beginners/exercises/mesi.html
+++ b/redirect/Scuola/TPSI/Esercizi da beginners/exercises/mesi.html
@@ -5,15 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mesi</title>
-    <script src="./static/js/js.js"></script>
     <link rel="stylesheet" href="static/css/css.css">
 </head>
 <body>
     <div class="calcoliVari">
-        <div>
-            <input type="text" name="mese" id="mese" placeholder="Inserisci un mese">
-            <p id="days">&nbsp;</p>
-            <button onclick="getTotDays()">Calcola</button>
-        </div>
+        <form id="get-month-days">
+            <div>
+                <input type="text" name="mese" id="mese" placeholder="Inserisci un mese">
+                <p id="days">&nbsp;</p>
+                <button type="submit">Calcola</button>
+            </div>
+        </form>
+    </div>
+    <script src="./static/js/totDays.js"></script>
 </body>
 </html>
