--- a/redirect/Scuola/TPSI/Esercizi da beginners/exercises/timezone.html
+++ b/redirect/Scuola/TPSI/Esercizi da beginners/exercises/timezone.html
@@ -4,18 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Giglo</title>
-    <script src="./static/js/js.js"></script>
+    <title>Timezone</title>
     <link rel="stylesheet" href="static/css/css.css">
 </head>
 <body>
     <div class="calcoliVari">
-        <div>
-            <input type="number" name="orario" id="orario" placeholder="Inserisci l'orario">
-            <input type="number" name="min" id="min" placeholder="Minuti">
-            <button onclick="timeConverter()">Calcola</button>
-            <p id="timeConverted">&nbsp;</p>
-        </div>
+        <form id="time-zone">
+            <div>
+                <input type="number" name="orario" id="orario" placeholder="Inserisci l'orario">
+                <input type="number" name="min" id="min" placeholder="Minuti">
+                <button type="submit">Calcola</button>
+                <p id="timeConverted">&nbsp;</p>
+            </div>
+        </form>
     </div>
+    <script src="./static/js/timezone.js"></script>
 </body>
 </html>
