--- a/redirect/Scuola/TPSI/Esercizi da beginners/exercises/voto.html
+++ b/redirect/Scuola/TPSI/Esercizi da beginners/exercises/voto.html
@@ -5,16 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Voto</title>
-    <script src="./static/js/js.js"></script>
     <link rel="stylesheet" href="static/css/css.css">
 </head>
 <body>
     <div class="calcoliVari">
-        <div>
-            <input type="number" name="voto" id="voto" placeholder="Inserisci il voto">
-            <p id="isOkOrNot">&nbsp;</p>
-            <button onclick="isOkorNot()">Calcola</button>
-        </div>
+        <form id="its-a-good-grade">
+            <div>
+                <input type="number" name="voto" id="voto" placeholder="Inserisci il voto">
+                <p id="isOkOrNot">&nbsp;</p>
+                <button type="submit">Calcola</button>
+            </div>
+        </form>
     </div>
+    <script src="./static/js/itsaGoodGrade.js"></script>
 </body>
 </html>
