--- a/redirect/Scuola/TPSI/tpsi.html
+++ b/redirect/Scuola/TPSI/tpsi.html
@@ -24,6 +24,9 @@
                 <a href="./Esercizi da beginners/index.html">Esercizi da Beginner</a>
             </li>
             <li>
+                <a href="./Sinusoide/index.html">Sinusoide</a>
+            </li>
+            <li>
                 <a href="../scuola.html">(<-) Back</a>
             </li>
            </ul>
