Modificato stile home

--- a/index.html
+++ b/index.html
@@ -8,20 +8,44 @@
     <title>Home</title>
 </head>
 <body>
-    <div class="box">
-        <div class="form">
-           <ul>
+    <div class="menu">
+        <ul>
             <li>
-                <a href="./redirect/Scuola/scuola.html">Scuola</a>
+                <p>
+                    <a href="https://ilgabbo.github.io">Home</a>
+                </p>
             </li>
             <li>
-                <a href="./redirect/geolocation/index.html">Geolocation</a>
+                <p>
+                    <a href="#" id="about-me" onclick="showAbout()">About</a>
+                </p>
             </li>
             <li>
-                <a href="./donate.html">Donazioni</a>
+                <p>
+                    <a href="./redirect/Scuola/scuola.html">Exercises</a>
+                </p>
             </li>
-           </ul>
-        </div>
+            <li>
+                <p>
+                    <a href="./redirect/geolocation/index.html">Geolocation</a>
+                </p>
+            </li>
+            <li>
+                <a href="">Donations</a>
+            </li>
+        </ul>
     </div>
+
+    <div class="about">
+        <p>
+            Mancini Gabriele
+        </p>
+        <p>
+            4 ITIA/C
+        </p>
+        <a href="http://stogabbo.ddns.net">Il mio sito</a>
+    </div>
+    
+    <script src="./static/js/js.js"></script>
 </body>
 </html>
