Modificato design di tutto

--- a/index.html
+++ b/index.html
@@ -9,32 +9,42 @@
 </head>
 <body>
     <div class="menu">
-        <ul>
-            <li>
-                <p>
-                    <a href="https://ilgabbo.github.io">Home</a>
-                </p>
-            </li>
-            <li>
-                <p>
-                    <a href="#" id="about-me" onclick="showAbout()">About</a>
-                </p>
-            </li>
-            <li>
-                <p>
-                    <a href="./redirect/Scuola/scuola.html">Exercises</a>
-                </p>
-            </li>
-            <li>
-                <p>
-                    <a href="./redirect/geolocation/index.html">Geolocation</a>
-                </p>
-            </li>
-            <li>
-                <a href="">Donations</a>
-            </li>
-        </ul>
+        <div class="logo">
+            <a href="https://github.com/IlGabbo">
+                <img src="https://avatars.githubusercontent.com/u/96393534?v=4" alt="MyLogo">
+            </a>
+        </div>
+        <div class="options">
+            <ul>
+                <li>
+                    <p>
+                        <a href="index.html">HOME</a>
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        <a href="#" id="about-me" onclick="showAbout()">ABOUT</a>
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        <a href="./redirect/Scuola/scuola.html">EXERCISES</a>
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        <a href="./redirect/geolocation/index.html">GEOLOCATION</a>
+                    </p>
+                </li>
+                <li>
+                    <a href="./donate.html">DONATIONS</a>
+                </li>
+            </ul>
+        </div>
     </div>
+    <h1>
+        Sei nella Home
+    </h1>
 
     <div class="about">
         <p>
@@ -43,7 +53,7 @@
         <p>
             4 ITIA/C
         </p>
-        <a href="http://stogabbo.ddns.net">Il mio sito</a>
+        <a href="http://stogabbo.ddns.net" style="color: #fff;">Il mio sito</a>
     </div>
     
     <script src="./static/js/js.js"></script>
