--- a/redirect/Scuola/TPSI/tpsi.html
+++ b/redirect/Scuola/TPSI/tpsi.html
@@ -8,29 +8,68 @@
     <title>Tpsi</title>
 </head>
 <body>
-    <div class="box">
-        <div class="form">
-           <ul>
+    <div class="menu">
+        <div class="logo">
+            <a href="https://github.com/IlGabbo">
+                <img src="https://avatars.githubusercontent.com/u/96393534?v=4" alt="MyLogo">
+            </a>
+        </div>
+        <div class="options">
+            <ul>
+                <li>
+                    <p>
+                        <a href="../../../index.html">HOME</a>
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        <a href="#" id="about-me" onclick="showAbout()">ABOUT</a>
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        <a href="../../geolocation/index.html">GEOLOCATION</a>
+                    </p>
+                </li>
+                <li>
+                    <a href="../../../donate.html">DONATIONS</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div class="exercises">
+        <ul>
             <li>
-                <a href="./Fiorellino animato/index.html">Fiorellino animato</a>
+                <a href="./Esercizi da beginners/index.html">Esercizi da Beginners</a>
             </li>
             <li>
-                <a href="./Fiorellino funzionato/index.html">Fiorellino funzionato</a>
+                <a href="./Fiorellino animato/index.html">Fiorellino Animato</a>
+            </li>
+            <li>
+                <a href="./Fiorellino funzionato/index.html">Fiorellino Funzionato</a>
             </li>
             <li>
                 <a href="./RandomCircles/index.html">Cerchi Random</a>
             </li>
             <li>
-                <a href="./Esercizi da beginners/index.html">Esercizi da Beginner</a>
-            </li>
-            <li>
                 <a href="./Sinusoide/index.html">Sinusoide</a>
             </li>
             <li>
-                <a href="../scuola.html">(<-) Back</a>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/b/b1/Back_Arrow.svg" alt="back-arrow">
+                <a href="../scuola.html">Return back</a>
             </li>
-           </ul>
-        </div>
+        </ul>
     </div>
+
+    <div class="about">
+        <p>
+            Mancini Gabriele
+        </p>
+        <p>
+            4 ITIA/C
+        </p>
+        <a href="http://stogabbo.ddns.net" style="color: #fff;">Il mio sito</a>
+    </div>
+    <script src="./static/js/js.js"></script>
 </body>
 </html>
