--- a/donate.html
+++ b/donate.html
@@ -12,8 +12,8 @@
         Thanks!
     </div>
     <div class="box">
-        <input type="range" name="amount" id="amount" min="1" max="100" oninput="writeValue()">
-        <input type="number" id="value" placeholder="€51">
+        <input type="range" name="amount" id="amount" min="1" max="500" oninput="writeValue()">
+        <input type="number" id="value" placeholder="€251" disabled>
         <button onclick="generatePayment(document.querySelector('#value').placeholder)">Donate</button>
     </div>
     <div id="paypal-button-container"></div>
