--- a/redirect/Scuola/Informatica/informatica.html
+++ b/redirect/Scuola/Informatica/informatica.html
@@ -5,12 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="static/css/informatica.css">
-    <title>Informatica</title>
+    <title>Tpsi</title>
 </head>
 <body>
-    <div class="box">
-        <div class="form">
-           <ul>
+    <div class="menu">
+        <div class="logo">
+            <a href="https://github.com/IlGabbo">
+                <img src="https://avatars.githubusercontent.com/u/96393534?v=4" alt="MyLogo">
+            </a>
+        </div>
+        <div class="options">
+            <ul>
+                <li>
+                    <p>
+                        <a href="../../../index.html">HOME</a>
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        <a href="#" id="about-me" onclick="showAbout()">ABOUT</a>
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        <a href="../../geolocation/index.html">GEOLOCATION</a>
+                    </p>
+                </li>
+                <li>
+                    <a href="../../../donate.html">DONATIONS</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div class="exercises">
+        <ul>
+            <li>
+                <a href="./AreaRettangolo/src/it/gabbo/Main.java">Area Rettangolo</a>
+            </li>
             <li>
                 <a href="./ContoCorrente/src/com/gabbo/ContoCorrente.java">Conto Corrente</a>
             </li>
@@ -18,13 +49,21 @@
                 <a href="./NumeriAlternati/src/MainClass.java">Numeri Alternati</a>
             </li>
             <li>
-                <a href="./AreaRettangolo/src/it/gabbo/Main.java">Area Rettangolo (Costructor)</a>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/b/b1/Back_Arrow.svg" alt="back-arrow">
+                <a href="../scuola.html">Return back</a>
             </li>
-            <li>
-                <a href="../scuola.html">(<-) Back</a>
-            </li>
-           </ul>
-        </div>
+        </ul>
     </div>
+
+    <div class="about">
+        <p>
+            Mancini Gabriele
+        </p>
+        <p>
+            4 ITIA/C
+        </p>
+        <a href="http://stogabbo.ddns.net" style="color: #fff;">Il mio sito</a>
+    </div>
+    <script src="./static/js/js.js"></script>
 </body>
 </html>
