--- a/redirect/Scuola/scuola.html
+++ b/redirect/Scuola/scuola.html
@@ -8,9 +8,52 @@
     <title>Scuola</title>
 </head>
 <body>
-    <div class="box">
-        <div class="form">
-           <ul>
+    <div class="menu">
+        <div class="logo">
+            <a href="https://github.com/IlGabbo">
+                <img src="https://avatars.githubusercontent.com/u/96393534?v=4" alt="MyLogo">
+            </a>
+        </div>
+        <div class="options">
+            <ul>
+                <li>
+                    <p>
+                        <a href="../../index.html">HOME</a>
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        <a href="#" id="about-me" onclick="showAbout()">ABOUT</a>
+                    </p>
+                </li>
+                <li>
+                    <p>
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        <a href="./redirect/geolocation/index.html">GEOLOCATION</a>
+                    </p>
+                </li>
+                <li>
+                    <a href="../../donate.html">DONATIONS</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="about">
+        <p>
+            Mancini Gabriele
+        </p>
+        <p>
+            4 ITIA/C
+        </p>
+        <a href="http://stogabbo.ddns.net" style="color: #fff;">Il mio sito</a>
+    </div>
+
+    <div class="exercises">
+        <ul>
             <li>
                 <a href="./Informatica/informatica.html">Informatica</a>
             </li>
@@ -18,10 +61,11 @@
                 <a href="./TPSI/tpsi.html">TPSI</a>
             </li>
             <li>
-                <a href="../../index.html">(<-) Back</a>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/b/b1/Back_Arrow.svg" alt="back-arrow">
+                <a href="../../index.html">Return back</a>
             </li>
-           </ul>
-        </div>
+        </ul>
     </div>
+    <script src="./static/js/js.js"></script>
 </body>
 </html>
