--- a/redirect/geolocation/index.html
+++ b/redirect/geolocation/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <head>
     <script type="text/javascript" src="js.js"></script>
@@ -6,7 +5,6 @@
 </head>
 <html>
 <body>
-
-<p id="coordinates"></p>
+    <iframe src="http" frameborder="0"></iframe>
 </body>
 </html>
