z Icona di notifica

--- a/index.html
+++ b/index.html
@@ -10,8 +10,15 @@
 <body>
     <div class="menu">
         <div class="logo">
-            <a href="https://github.com/IlGabbo">
-                <img src="https://avatars.githubusercontent.com/u/96393534?v=4" alt="MyLogo">
+            <form action="https://github.com/IlGabbo" method="post">
+                <button type="submit">
+                    <img src="https://avatars.githubusercontent.com/u/96393534?v=4" alt="MyLogo">           
+                </button>
+            </form> 
+        </div>
+        <div class="notification" id="notification">
+            <a href="#" onclick="notification()">
+                <img src="./static/css/bell.svg" alt="notification">
             </a>
         </div>
         <div class="options">
@@ -37,7 +44,9 @@
                     </p>
                 </li>
                 <li>
-                    <a href="./donate.html">DONATIONS</a>
+                    <p>
+                        <a href="./donate.html">DONATIONS</a>
+                    </p>
                 </li>
             </ul>
         </div>
@@ -45,6 +54,23 @@
     <h1>
         Sei nella Home
     </h1>
+    <div>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione tempore corporis cum blanditiis beatae repellat nemo molestias ipsa, ex libero. Reiciendis soluta exercitationem architecto unde consequuntur distinctio. Debitis, hic dolor.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione tempore corporis cum blanditiis beatae repellat nemo molestias ipsa, ex libero. Reiciendis soluta exercitationem architecto unde consequuntur distinctio. Debitis, hic dolor.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione tempore corporis cum blanditiis beatae repellat nemo molestias ipsa, ex libero. Reiciendis soluta exercitationem architecto unde consequuntur distinctio. Debitis, hic dolor.
+        <var> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione tempore corporis cum blanditiis beatae repellat nemo molestias ipsa, ex libero. Reiciendis soluta exercitationem architecto unde consequuntur distinctio. Debitis, hic dolor.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione tempore corporis cum blanditiis beatae repellat nemo molestias ipsa, ex libero. Reiciendis soluta exercitationem architecto unde consequuntur distinctio. Debitis, hic dolor.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione tempore corporis cum blanditiis beatae repellat nemo molestias ipsa, ex libero. Reiciendis soluta exercitationem architecto unde consequuntur distinctio. Debitis, hic dolor.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione tempore corporis cum blanditiis beatae repellat nemo molestias ipsa, ex libero. Reiciendis soluta exercitationem architecto unde consequuntur distinctio. Debitis, hic dolor.
+            <var> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione tempore corporis cum blanditiis beatae repellat nemo molestias ipsa, ex libero. Reiciendis soluta exercitationem architecto unde consequuntur distinctio. Debitis, hic dolor.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione tempore corporis cum blanditiis beatae repellat nemo molestias ipsa, ex libero. Reiciendis soluta exercitationem architecto unde consequuntur distinctio. Debitis, hic dolor.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione tempore corporis cum blanditiis beatae repellat nemo molestias ipsa, ex libero. Reiciendis soluta exercitationem architecto unde consequuntur distinctio. Debitis, hic dolor.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione tempore corporis cum blanditiis beatae repellat nemo molestias ipsa, ex libero. Reiciendis soluta exercitationem architecto unde consequuntur distinctio. Debitis, hic dolor.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione tempore corporis cum blanditiis beatae repellat nemo molestias ipsa, ex libero. Reiciendis soluta exercitationem architecto unde consequuntur distinctio. Debitis, hic dolor.
+                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione tempore corporis cum blanditiis beatae repellat nemo molestias ipsa, ex libero. Reiciendis soluta exercitationem architecto unde consequuntur distinctio. Debitis, hic dolor.
+            </var>
+        </var>
+    </div>
 
     <div class="about">
         <p>
@@ -54,6 +80,17 @@
             4 ITIA/C
         </p>
         <a href="http://stogabbo.ddns.net" style="color: #fff;">Il mio sito</a>
+    </div>
+
+    <div id="window-notification">
+        <p>
+            Message Box
+        </p>
+        <div class="message-box">
+            <p>Design rivisto
+                <span>At 11:00, 23/11/22</span>
+            </p>
+        </div>
     </div>
     
     <script src="./static/js/js.js"></script>
