--- a/redirect/Scuola/scuola.html
+++ b/redirect/Scuola/scuola.html
@@ -10,9 +10,11 @@
 <body>
     <div class="menu">
         <div class="logo">
-            <a href="https://github.com/IlGabbo">
-                <img src="https://avatars.githubusercontent.com/u/96393534?v=4" alt="MyLogo">
-            </a>
+            <form action="https://github.com/IlGabbo" method="post">
+                <button type="submit">
+                    <img src="https://avatars.githubusercontent.com/u/96393534?v=4" alt="MyLogo">           
+                </button>
+            </form>
         </div>
         <div class="options">
             <ul>
