--- a/redirect/Scuola/scuola.html
+++ b/redirect/Scuola/scuola.html
@@ -16,6 +16,11 @@
                 </button>
             </form>
         </div>
+        <div class="hamburger" id="hamburger" onclick="showMenu()">
+            <div>&nbsp;</div>
+            <div>&nbsp;</div>
+            <div>&nbsp;</div>
+        </div>
         <div class="options">
             <ul>
                 <li>
