--- a/index.html
+++ b/index.html
@@ -5,13 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./static/css/Home.css">
+    <link rel="stylesheet" href="./static/css/Query.css">
     <title>Home</title>
 </head>
 <body>
     <div class="context-menu shadow-in" id="context-menu">
         <div id="image" class="image">&nbsp;</div>
-        <div id="notifications">
-            <img src="./static/images/bell.png" alt="bell">
+        <div id="notifications" style="margin-right: 3%; width: 25px;">
+            <img src="./static/images/bell.png" alt="bell" style="width: 25px;">
+        </div>
+        <div class="hamburger">
+            <a href="#">
+                <p>&nbsp;</p>
+                <p>&nbsp;</p>
+                <p>&nbsp;</p>
+            </a>
         </div>
         <div class="options">
             <a href="./index.html">Home</a>
@@ -35,7 +43,6 @@
             <p class="nothing">Vuoto</p>
         </div>
     </div>
-    <audio autoplay id="audio" style="display: none;" src="./static/js/ph-intro.mp3"></audio>
     <script src="./static/js/js.js"></script>
 </body>
 </html>
