Media Query a tutto

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="context-menu shadow-in" id="context-menu">
         <div id="image" class="image">&nbsp;</div>
         <div id="notifications" style="margin-right: 3%; width: 25px;">
-            <img src="./static/images/bell.png" alt="bell" style="width: 25px;">
+            <img src="./static/images/bell.svg" alt="bell" style="width: 25px;">
         </div>
         <div class="hamburger">
             <a href="#">
@@ -23,7 +23,7 @@
         </div>
         <div class="options">
             <a href="./index.html">Home</a>
-            <a href="#">About</a>
+            <a href="#" onclick="showAboutMe()">About</a>
             <a href="./redirect/Scuola/index.html">Exercises</a>
             <a href="./redirect/geolocation/index.html">Geolocation</a>
             <a href="./donate.html">Donations</a>
@@ -34,14 +34,41 @@
     </div>
     <div class="content" id="content">
         <div class="Lorem" id="Lorem">
-            Sei nella homepage
+            <h3>Version History</h3>
+            <p>Versione 0.4v</p>
+            <p>- 25/11/2022 Design migliorato</p>
+            <p>- 24/11/2022 Aggiunte Media Query alla Home</p>
+            <p>- 23/11/2022 Design interamente modificato</p>
+            <p>- 19/11/2022 Design modificato</p>
+        </div>
+        <div id="content-box" class="content-box">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit expedita qui ipsam molestias, veritatis aspernatur fugit, laboriosam, doloremque a fuga atque ab eaque ex asperiores! Culpa iure doloribus sunt dignissimos!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit expedita qui ipsam molestias, veritatis aspernatur fugit, laboriosam, doloremque a fuga atque ab eaque ex asperiores! Culpa iure doloribus sunt dignissimos!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit expedita qui ipsam molestias, veritatis aspernatur fugit, laboriosam, doloremque a fuga atque ab eaque ex asperiores! Culpa iure doloribus sunt dignissimos!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit expedita qui ipsam molestias, veritatis aspernatur fugit, laboriosam, doloremque a fuga atque ab eaque ex asperiores! Culpa iure doloribus sunt dignissimos!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit expedita qui ipsam molestias, veritatis aspernatur fugit, laboriosam, doloremque a fuga atque ab eaque ex asperiores! Culpa iure doloribus sunt dignissimos!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit expedita qui ipsam molestias, veritatis aspernatur fugit, laboriosam, doloremque a fuga atque ab eaque ex asperiores! Culpa iure doloribus sunt dignissimos!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit expedita qui ipsam molestias, veritatis aspernatur fugit, laboriosam, doloremque a fuga atque ab eaque ex asperiores! Culpa iure doloribus sunt dignissimos!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit expedita qui ipsam molestias, veritatis aspernatur fugit, laboriosam, doloremque a fuga atque ab eaque ex asperiores! Culpa iure doloribus sunt dignissimos!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit expedita qui ipsam molestias, veritatis aspernatur fugit, laboriosam, doloremque a fuga atque ab eaque ex asperiores! Culpa iure doloribus sunt dignissimos!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit expedita qui ipsam molestias, veritatis aspernatur fugit, laboriosam, doloremque a fuga atque ab eaque ex asperiores! Culpa iure doloribus sunt dignissimos!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit expedita qui ipsam molestias, veritatis aspernatur fugit, laboriosam, doloremque a fuga atque ab eaque ex asperiores! Culpa iure doloribus sunt dignissimos!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit expedita qui ipsam molestias, veritatis aspernatur fugit, laboriosam, doloremque a fuga atque ab eaque ex asperiores! Culpa iure doloribus sunt dignissimos!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit expedita qui ipsam molestias, veritatis aspernatur fugit, laboriosam, doloremque a fuga atque ab eaque ex asperiores! Culpa iure doloribus sunt dignissimos!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit expedita qui ipsam molestias, veritatis aspernatur fugit, laboriosam, doloremque a fuga atque ab eaque ex asperiores! Culpa iure doloribus sunt dignissimos!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit expedita qui ipsam molestias, veritatis aspernatur fugit, laboriosam, doloremque a fuga atque ab eaque ex asperiores! Culpa iure doloribus sunt dignissimos!
         </div>
     </div>
-    <div id="message-box">
+    <div id="message-box">  
         <p>Message Box</p>
         <div id="message-content-box">
             <p class="nothing">Vuoto</p>
         </div>
+    </div>
+    <div id="about" class="about">
+        <p>Mancini Gabriele</p>
+        <p>4 itia/C</p>
+        <p>25/11/2022</p>
     </div>
     <script src="./static/js/js.js"></script>
 </body>
