--- a/redirect/Scuola/Informatica/index.html
+++ b/redirect/Scuola/Informatica/index.html
@@ -5,17 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./static/css/Info.css">
-    <title>Home</title>
+    <link rel="stylesheet" href="./static/css/Query.css">
+    <title>Informatica</title>
 </head>
 <body>
     <div class="context-menu shadow-in" id="context-menu">
         <div id="notifications">
-            <img src="./static/images/bell.png" alt="bell">
+            <img src="./static/images/bell.svg" alt="bell">
+        </div>
+        <div class="hamburger">
+            <a href="#">
+                <p>&nbsp;</p>
+                <p>&nbsp;</p>
+                <p>&nbsp;</p>
+            </a>
         </div>
         <div class="options">
             <a href="../index.html">Back</a>
             <a href="../../../index.html">Home</a>
-            <a href="#">About</a>
             <a href="../../geolocation/index.html">Geolocation</a>
             <a href="../../../donate.html">Donations</a>
         </div>
@@ -33,6 +40,9 @@
             </div>
             <div>
                 <a href="./NumeriAlternati/src/MainClass.java">Numeri Alternati</a>
+            </div>
+            <div>
+                <a href="./Lampadina.zip" download>Lampadina</a>
             </div>
         </div>
     </div>
