--- a/redirect/Scuola/index.html
+++ b/redirect/Scuola/index.html
@@ -5,16 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./static/css/Scuola.css">
-    <title>Home</title>
+    <link rel="stylesheet" href="./static/css/Query.css">
+    <title>Scuola</title>
 </head>
 <body>
     <div class="context-menu shadow-in" id="context-menu">
         <div id="notifications">
-            <img src="./static/images/bell.png" alt="bell">
+            <img src="./static/images/bell.svg" alt="bell">
+        </div>
+        <div class="hamburger">
+            <a href="#">
+                <p>&nbsp;</p>
+                <p>&nbsp;</p>
+                <p>&nbsp;</p>
+            </a>
         </div>
         <div class="options">
             <a href="../../index.html">Home</a>
-            <a href="#">About</a>
             <a href="../../redirect/geolocation/index.html">Geolocation</a>
             <a href="../../donate.html">Donations</a>
         </div>
