--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
     <div class="content" id="content">
         <div class="Lorem" id="Lorem">
             <h3>Version History</h3>
-            <p>Versione 0.4v</p>
+            <p>Versione 0.5v</p>
+            <p>- 26/11/2022 Bug Fix</p>
             <p>- 25/11/2022 Design migliorato</p>
             <p>- 24/11/2022 Aggiunte Media Query alla Home</p>
             <p>- 23/11/2022 Design interamente modificato</p>
