--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
     <div class="context-menu shadow-in" id="context-menu">
-        <div id="image" class="image">&nbsp;</div>
+        <div id="image" class="image">
+        </div>
         <div id="notifications" style="margin-right: 3%; width: 25px;">
             <img src="./static/images/bell.svg" alt="bell" style="width: 25px;">
         </div>
