--- a/redirect/Scuola/index.html
+++ b/redirect/Scuola/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <div class="context-menu shadow-in" id="context-menu">
-        <div id="notifications">
-            <img src="./static/images/bell.svg" alt="bell">
+        <div id="notifications" style="margin-right: 3%; width: 25px;">
+            <img src="./static/images/bell.svg" alt="bell" style="width: 25px;">
         </div>
         <div class="hamburger">
             <a href="#">
