--- a/redirect/Scuola/TPSI/index.html
+++ b/redirect/Scuola/TPSI/index.html
@@ -48,6 +48,9 @@
             <div>
                 <a href="./Moto Uniformemente Accelerato/index.html">Moto Accelerato</a>
             </div>
+            <div>
+                <a href="./Compito17Dicembre/index.html">Compito 17 Dicembre</a>
+            </div>
         </div>
     </div>
     <div id="message-box">
