--- a/redirect/Scuola/TPSI/Compito17Dicembre/index.html
+++ b/redirect/Scuola/TPSI/Compito17Dicembre/index.html
@@ -1,5 +1,13 @@
 <html>
-  <a href="./10point.html">10 print</a>
-  <a href="./pattern_casuale.html">Pattern Casuale</a>
-  <a href="./truchet_tiles.html">Truchet Tiles</a>
+  <ul>
+    <li>
+      <a href="./10print.html">10 print</a>
+    </li>
+    <li>
+      <a href="./pattern_casuale.html">Pattern Casuale</a>
+    </li>
+    <li>
+      <a href="./truchet_tiles.html">Truchet Tiles</a>
+    </li>
+  </ul>  
 </html>
