--- a/redirect/Scuola/TPSI/index.html
+++ b/redirect/Scuola/TPSI/index.html
@@ -51,6 +51,9 @@
             <div>
                 <a href="./Compito17Dicembre/index.html">Compito 17 Dicembre</a>
             </div>
+            <div>
+                <a href="./Color Picker/index.html">Color Picker</a>
+            </div>
         </div>
     </div>
     <div id="message-box">
