--- a/redirect/Scuola/TPSI/Color Picker/index.html
+++ b/redirect/Scuola/TPSI/Color Picker/index.html
@@ -11,33 +11,33 @@
 <body>
     <span id="span"></span>
     <div class="centered-box">
-        <div>
+        <div class="class">
             <h1>PICK A COLOR</h1>
+            <p>Scegli un colore per cambiare lo sfondo della pagina</p> 
         </div>
-        <div class="guide">
-            <p>Scegli un colore per cambiare lo sfondo della pagina</p>            
+        <div>           
+            <div class="palette">
+                <div class="color" data-color="#ff0000">
+                    <div class="red color-box"></div>
+                </div>
+                <div class="color" data-color="#59BC98">
+                    <div class="cyan color-box"></div>
+                </div>
+                <div class="color" data-color="#2594D2">
+                    <div class="blue color-box"></div>
+                </div>
+                <div class="color" data-color="#72BC59">
+                    <div class="green color-box"></div>
+                </div>
+                <div class="color" data-color="#BC59A0">
+                    <div class="purple color-box"></div>
+                </div>
+                <div class="color" data-color="#DCF63C">
+                    <div class="yellow color-box"></div>
+                </div>
+            </div>
         </div>
-        <div class="palette">
-            <div class="color" data-color="#ff0000">
-                <div class="red color-box"></div>
-            </div>
-            <div class="color" data-color="#59BC98">
-                <div class="cyan color-box"></div>
-            </div>
-            <div class="color" data-color="#2594D2">
-                <div class="blue color-box"></div>
-            </div>
-            <div class="color" data-color="#72BC59">
-                <div class="green color-box"></div>
-            </div>
-            <div class="color" data-color="#BC59A0">
-                <div class="purple color-box"></div>
-            </div>
-            <div class="color" data-color="#DCF63C">
-                <div class="yellow color-box"></div>
-            </div>
-        </div>
-    </div>
+    </div>    
     <script src="./static/js/js.js"></script>
 </body>
 </html>
