--- a/redirect/Scuola/TPSI/index.html
+++ b/redirect/Scuola/TPSI/index.html
@@ -54,6 +54,9 @@
             <div>
                 <a href="./Color Picker/index.html">Color Picker</a>
             </div>
+            <div>
+                <a href="./Tris/index.html">Color Picker</a>
+            </div>
         </div>
     </div>
     <div id="message-box">
