--- a/redirect/Scuola/TPSI/index.html
+++ b/redirect/Scuola/TPSI/index.html
@@ -55,7 +55,7 @@
                 <a href="./Color Picker/index.html">Color Picker</a>
             </div>
             <div>
-                <a href="./Tris/index.html">Color Picker</a>
+                <a href="./Tris/index.html">Tris</a>
             </div>
         </div>
     </div>
